--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,6 +8,8 @@
     padding-bottom: 200px;
   }
 
+  margin: auto;
+
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
