--- a/css/main.css
+++ b/css/main.css
@@ -743,6 +743,7 @@ img {
 }
 
 .hero {
+  margin: auto;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/mobile/hero/hero-img1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
